Fix CSS alignment for logo

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -59,8 +59,10 @@ html {
 /* HEADER styles */
 
 #logo {
+
   width: 50px;
   height: auto;
+
 }
 
 .navlinks {
@@ -82,9 +84,10 @@ ul.navlinks {
   display: flex;
   list-style-type: none;
   gap: 2rem;
-  margin: 1rem;
+
   max-width: 80vw;
-  width: 800px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .navlinks ul li {
@@ -123,9 +126,9 @@ ul.navlinks {
 }
 
 .logo-container {
-  /* display: flex;
-  justify-content: space-between; */
-  left: 0;
+  display: flex;
+  justify-content: space-between;
+  /* left: 0; */
   margin: 2rem;
 }
 
@@ -201,11 +204,11 @@ select {
 }
 
 input[type="email"] {
-  width: 100%;
+  width: 200px;
   height: 44px;
-  max-width: 200px;
+  max-width: 80vw;
   padding: 10px;
-  margin-left: 1rem;
+  margin: 1rem;
   border: 1px solid #ccc;
   border-radius: 8px;
   font-size: 1rem;
@@ -300,14 +303,17 @@ select:focus {
 .sign-up {
   /* margin: 0 auto; */
   height: 44px;
-  max-width: 200px;
-  width: 80%;
+  max-width: 100vw;
+  width: 200px;
   border-radius: 25px;
   font-weight: 600;
   color: var(--accent-color2);
   background-color: var(--highlight-color);
 
-  transition: color 0.5s ease, background-color 0.5s ease, transform 0.5s ease;
+  transition:
+    color 0.5s ease,
+    background-color 0.5s ease,
+    transform 0.5s ease;
 }
 
 .sign-up:hover {
@@ -564,7 +570,7 @@ footer {
   margin-top: 1.5rem;
 }
 
-@media all and (min-width: 100px) {
+@media all and (max-width: 200px) {
   .wrapper {
     display: flex;
     max-width: 100vw;
@@ -573,12 +579,7 @@ footer {
     margin: 0;
   }
 
-  input[type="email"] {
-    max-width: 50vw;
-    width: 200px;
-    width: 100%;
-    margin-left: 1rem;
-  }
+
 
   .sticker {
     margin-bottom: 15rem;
@@ -597,12 +598,6 @@ footer {
     padding: var(--font-size-small);
   }
 
-  input[type="email"],
-  .sign-up {
-    max-width: 100vw;
-    width: 200px;
-    width: 100%;
-  }
 
   .welcome {
     margin: 2rem;
@@ -615,10 +610,7 @@ footer {
     height: auto;
   }
 
-  .user-login {
-    max-width: 100vw;
-    width: 100%;
-  }
+
 
   .user-login p {
     text-align: center;
@@ -651,12 +643,6 @@ footer {
     height: 200px;
   }
 
-  .sign-up {
-    max-width: 200px;
-    width: 80%;
-    font-size: 14px;
-    border-radius: 25px;
-  }
 
   .logo-container {
     display: flex;
@@ -669,6 +655,13 @@ footer {
   .hero {
     display: none;
   }
+
+  /* input[type="email"],
+  .sign-up {
+    max-width: 100vw;
+    width: 100px;
+
+  } */
 }
 
 @media all and (max-width: 510px) {
@@ -677,23 +670,23 @@ footer {
     height: 200px;
   }
 
-  input[type="email"],
-  .sign-up {
+  .user-login {
     max-width: 100vw;
-    width: 150px;
+    width: 100%;
   }
+
+
+
 }
+
+
 
 @media all and (max-width: 675px) {
   #menu {
     display: block;
   }
 
-  input[type="email"],
-  .sign-up {
-    max-width: 100vw;
-    width: 200px;
-  }
+
 
   .logo-text {
     display: none;
@@ -706,6 +699,11 @@ footer {
   ul.open {
     display: flex;
   }
+
+  .logo-image.open {
+    display: none;
+  }
+
 
   .navlinks ul {
     flex-direction: column;
